opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/samoht/ramen"
bug-reports:  "https://github.com/samoht/ramen/issues"
dev-repo:     "https://github.com/samoht/ramen.git"
doc:          "https://samoht.github.io/ramen/"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: ["jbuilder" "runtest"]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "fmt"
  "logs"
  "lambdasoup"
  "cmdliner"
  "astring"
  "re"
  "omd"
  "menhir"
  "ezjsonm"
  "alcotest" {test}
]
