opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/samoht/ramen"
bug-reports:  "https://github.com/samoht/ramen/issues"
dev-repo:     "https://github.com/samoht/ramen.git"
doc:          "https://samoht.github.io/ramen/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest"]

depends: [
  "dune"
  "fmt"
  "logs"
  "lambdasoup"
  "cmdliner"
  "astring"
  "re"
  "omd"
  "menhir"
  "ezjsonm"
  "alcotest" {test}
]
